# compresstoolcc

./: .gitignore  CMakeLists.txt  README.md
libhello/: CMakeLists.txt
src/: CMakeLists.txt  bits.cpp  bits.h  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  hello.cpp  hello.tests.cpp  huffman.cpp  huffman.h  huffman.tests.cpp  main.cpp  node.h  util.cpp  util.h
tests/: 5chars.txt  nonormal.txt
